TagContainer - tests - refactoring